<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f8f9fa"
    android:scrollbars="none"
    tools:context=".Activity.WorkOut">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/work_out"
            android:textStyle="bold"
            android:textColor="@color/biru"
            android:textSize="28sp"/>

        <androidx.cardview.widget.CardView
            android:onClick="senin"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/rb1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wo1"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swo1"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="selasa"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:src="@drawable/rb5"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wo2"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swo2"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="rest"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/hijau"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:src="@drawable/rb4"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wo3"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swo3"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="kamis"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:src="@drawable/rb3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wo4"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swo4"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="rest"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/hijau"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:src="@drawable/rb2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wo5"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swo5"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="sabtu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:src="@drawable/rb6"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wo6"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swo6"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:onClick="minggu"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="100dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:src="@drawable/rb7"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wo7"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/swo7"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>