<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#f8f9fa"
    android:scrollbars="none"
    tools:context=".Activity.Nutrition">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/nutrition"
            android:textStyle="bold"
            android:textColor="@color/biru"
            android:textSize="28sp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="208dp"
                android:src="@drawable/nt"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gradient_blue"
                android:contentDescription="@string/gradient" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/penjelasan"
                android:textSize="15.5sp"
                android:textColor="@color/white"
                android:justificationMode="inter_word"
                android:gravity="bottom"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:src="@drawable/nt_1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nt1"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snt1"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:src="@drawable/nt_2"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nt2"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snt2"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/biru"
            app:cardCornerRadius="10dp"
            android:elevation="0dp">
            <ImageView
                android:layout_gravity="end"
                android:layout_width="140dp"
                android:layout_height="match_parent"
                android:src="@drawable/nt_3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:layout_gravity="center_vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nt3"
                    android:textSize="25sp"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snt3"
                    android:textSize="16sp"
                    android:textColor="@color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</ScrollView>